# NTNU

./: README.md
IINI3003 - Webprogrammering i PHP/Modul 1/: dato.php  localhost.htm  tabel.php
IINI3003 - Webprogrammering i PHP/Modul 2/: Oving_2.php  lokker_og_matriser.php  nedtrekksliste.php
IINI3003 - Webprogrammering i PHP/Modul 3/: Oppgave_1.html  Oppgave_1.php  PizzaBestilling.php  PizzaOrdre.php  flervalgListe.php  (+3 more)
IINI3012 - Big data/: oppgave3_3.txt  oving3.R
IINI4001 - Applikasjonsutvikling for Android/: README.md
IINI4003 - C++ for programmerere/oving/oving6/: CMakeLists.txt  main.cpp  oving6.tar.xz  webserver.cpp
IINI4014 - Python for programmers/: PibyArchimedes.py  assignment_nine.py  findPrimes.py  functions_1.py  tempCodeRunnerFile.py
TDAT1001 - Programmering grunnkurs/: README.md  Øving 1 - 11 (Oppgaver fra læreboka) – TDAT1001.html
TDAT1006 - Systemutvikling 1 med databaseprosjekt (Squiggle Projekt)/: .gitignore  README.md
TDAT1007 - Ingeniørfaglig innføringsemne (LEGO Projekt)/: Katapult_Visualisering.java
TDAT2002 - Matematikk 2 (Prosjekt)/: README.md  oppgave2.py  oppgave3.py  oppgave4c.py  oppgave4d.py  oppgave5.py  oppgave6b.py  oppgave6c.py  oppgave6d.py  oppgave7.py
TDAT2003 - Systemutvikling 2 med web-applikasjoner (Harmoni Prosjekt)/: README.md
TDAT2004 - Datakommunikasjon med nettverksprogrammering/: README.md
TDT4136 - Introduksjon til kunstig intelligens/A_star-Samfundet/: Cargo.toml  README.md
TDT4136 - Introduksjon til kunstig intelligens/A_star-Samfundet/src/: astar.rs  cell.rs  draw.rs  main.rs  test.csv
(+730 files in other folders)
